@startuml

namespace common {
    interface Thread {
        + Run((ctx context.Context)
    }
}

namespace io {
    class IO << (S,Aquamarine) >> {
        - jobId int64
        - offset int64
        - buffer []byte
        - issue <font color=blue>func</font>(*os.File, int64, []byte, <font color=blue>func</font>(bool) ) error

        + Issue(wait *sync.WaitGroup) error
    }
}

namespace transaction {
    class Transaction << (S, Aquamarine) >> {
        - jobId int64
        - ios []*io.IO

        + ProcessAll() error
        + AddIO(ioAction engine.DoIO, offset int64, buffer *bytebuf.ByteBuf)
        + IOs() int
    }
}

namespace pattern {
    class Generator << (S,Aquamarine) >> {
        - pattern IOPattern
        - pageOffset int64
        - pageSz int64

        + Offset() int64

    }
    interface IOPattern  {
        + PageNo() int64

    }
    class Randomizer << (S,Aquamarine) >> {
        - rnd rand.Rand

        + PageNo() int64

    }
    class Sequencer << (S,Aquamarine) >> {
        - until int64
        - cursor int64

        + PageNo() int64

    }
}
"pattern.IOPattern" <|-- "pattern.Randomizer"
"pattern.IOPattern" <|-- "pattern.Sequencer"
"pattern.Generator" o-- "pattern.IOPattern"

namespace rand {
    interface Rand  {
        + Uint64() uint64
        + EnableHash(enable bool) 

    }
    class Uniform << (S,Aquamarine) >> {
        + Uint64() uint64

    }
    class Zipf << (S,Aquamarine) >> {
        - zipf *rand.Zipf

        + Uint64() uint64

    }
    class core << (S,Aquamarine) >> {
        - nRange uint64
        - rand *rand.Rand
        - randOff uint64
        - disableHash bool

        - init(seed int64, nRange uint64, center float64) error
        - hash(v uint64) uint64

        + EnableHash(enable bool) 

    }
}
"rand.Uniform" *-- "rand.core"
"rand.Zipf" *-- "rand.core"
"rand.Rand" <|-- "rand.Uniform"
"rand.Rand" <|-- "rand.Zipf"

namespace job {
    class Job << (S, Aquamarine) >> {
        - ioEngine engine.Engine
        - ioFunc engine.DoIO
        - jobId int64
        - ioSize int
        - address *pattern.Generator
        - delay time.Duration
        - trLength int
        - buffer <font color=blue>chan</font> *transaction.Transaction

        - newBuffer <font color=blue>func</font>(sz int) *bytebuf.ByteBuf
        - newTransaction() *transaction.Transaction

        + Run(ctx context.Context)
        + TransactionReceiver() <font color=blue>chan</font> *transaction.Transaction
    }
}

namespace engine {
    interface Engine {
        + ReadAt(p []byte, offset int64, callback Callback) error
        + WriteAt(p []byte, offset int64, callback Callback) error
        + GetIOFunc(type IOType) DoIO, error
        + Close() error
    }

    class SyncIO << (S, Aquamarine) >> {
        - fp *os.File

        + ReadAt(p []byte, offset int64, callback Callback) error
        + WriteAt(p []byte, offset int64, callback Callback) error
        + GetIOFunc(type IOType) DoIO, error
        + Close() error
    }

    class AsyncIO << (S, Aquamarine) >> {
        - fp *os.File

        + ReadAt(p []byte, offset int64, callback Callback) error
        + WriteAt(p []byte, offset int64, callback Callback) error
        + GetIOFunc(type IOType) DoIO, error
        + Close() error
    }

    class IOURing << (S, Aquamarine) >> {
        - fp *os.File
        - uring *iouring.IOURing
        - ch chan iouring.Result
        - ctx context.Context
        - handlerCount int

        - Run(ctx context.Context)

        + ReadAt(p []byte, offset int64, callback Callback) error
        + WriteAt(p []byte, offset int64, callback Callback) error
        + GetIOFunc(type IOType) DoIO, error
        + Close() error
    }
}
"engine.Engine" <|-- "engine.AsyncIO"
"engine.Engine" <|-- "engine.SyncIO"
"engine.Engine" <|-- "engine.IOURing"

namespace worker {
    /'
      Each worker run only their own transaction at a time.
     '/
    class Worker << (S, Aquamarine) >> {
        - queue <font color=blue>chan</font> *transaction.Transaction

        + Run(ctx context.Context)
    }
}

' Global associations
"pattern.Randomizer" o-- "rand.Rand"
"transaction.Transaction" o-- "io.IO"
"job.Job" *-- "pattern.Generator"
"job.Job" *-- "engine.Engine"
"worker.Worker" "consumer" --- "producer" "job.Job"
"common.Thread" <|-- "job.Job"
"common.Thread" <|-- "worker.Worker"
"common.Thread" <|-- "engine.IOURing"

@enduml
